datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id             Int                    @id @default(autoincrement())
  created_at     DateTime               @default(now())
  updated_at     DateTime?              @updatedAt
  phone          String?                @unique
  password       String?
  name           String?
  username       String?
  credit         Int?                   @default(0)
  role           Role                   @default(USER)
  orders         Order[]
  payments       Payment[]
  editedPayments Payment[]              @relation(name: "admin_edit")
  adminMessages  AdminPaymentMessages[]
}

model Package {
  id             String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  created_at     DateTime  @default(now())
  updated_at     DateTime? @updatedAt
  expirationDays Int
  traffic        Int
  price          Int
  userCount      Int       @default(0)
  oreders        Order[]

  @@unique([expirationDays, traffic, created_at])
}

model Order {
  id         Int       @id @default(autoincrement())
  created_at DateTime  @default(now())
  active_at  DateTime?
  user_id    Int
  config_url String?
  package_id String    @db.Uuid
  title      String?
  package    Package   @relation(fields: [package_id], references: [id])
  user       User      @relation(fields: [user_id], references: [id])
}

model Payment {
  id            Int                    @id @default(autoincrement())
  created_at    DateTime               @default(now())
  user_id       Int
  admin_id      Int?
  file_name     String
  amount        Int?
  user          User                   @relation(fields: [user_id], references: [id])
  adminMessages AdminPaymentMessages[]
  admin         User?                  @relation(name: "admin_edit", fields: [admin_id], references: [id])
}

model AdminPaymentMessages {
  id                   Int     @id @default(autoincrement())
  admin_id             Int
  payment_id           Int
  forwarded_message_id Int
  status_message_id    Int
  admin                User    @relation(fields: [admin_id], references: [id])
  payment              Payment @relation(fields: [payment_id], references: [id])
}

enum Role {
  ADMIN
  USER
}
