//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  phone String [unique]
  password String
  name String
  username String
  credit Int [default: 0]
  role Role [not null, default: 'USER']
  orders Order [not null]
  payments Payment [not null]
  editedPayments Payment [not null]
  adminMessages AdminPaymentMessages [not null]
}

Table Package {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  expirationDays Int [not null]
  traffic Int [not null]
  price Int [not null]
  userCount Int [not null, default: 0]
  oreders Order [not null]

  indexes {
    (expirationDays, traffic, created_at) [unique]
  }
}

Table Order {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  active_at DateTime
  user_id Int [not null]
  config_url String
  package_id String [not null]
  title String
  package Package [not null]
  user User [not null]
}

Table Payment {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  user_id Int [not null]
  admin_id Int
  file_name String [not null]
  amount Int
  user User [not null]
  adminMessages AdminPaymentMessages [not null]
  admin User
}

Table AdminPaymentMessages {
  id Int [pk, increment]
  admin_id Int [not null]
  payment_id Int [not null]
  forwarded_message_id Int [not null]
  status_message_id Int [not null]
  admin User [not null]
  payment Payment [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Order.package_id > Package.id

Ref: Order.user_id > User.id

Ref: Payment.user_id > User.id

Ref: Payment.admin_id > User.id

Ref: AdminPaymentMessages.admin_id > User.id

Ref: AdminPaymentMessages.payment_id > Payment.id